Fixing overflow and blank space issues when adding a new note

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,8 @@ textarea:focus{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  white-space: pre-line;
+  overflow-wrap: break-word;
 }
 
 
